exports[`test export.js 1`] = `
"/* @flow */
exports.x = 1;
exports.y = \"\";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */
exports.x = 1;
exports.y = \"\";
"
`;

exports[`test import.js 1`] = `
"/* @flow */
var e = require(\'./export\');
var x: string = e.x;
var y: number = e.y;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */
var e = require(\"./export\");
var x: string = e.x;
var y: number = e.y;
"
`;
